# aoc-2022-python

./: .gitignore  .pre-commit-config.yaml  README.rst  pyproject.toml
.circleci/: config.yml
aoc_2022/day_01/: a.py  b.py  input.txt  parser.py
aoc_2022/day_02/: a.py  b.py  input.txt  parser.py  shared.py
aoc_2022/day_03/: a.py  b.py  input.txt  parser.py  shared.py
aoc_2022/day_04/: a.py  b.py  input.txt  parser.py  shared.py
aoc_2022/day_05/: a.py  b.py  input.txt  parser.py  shared.py
aoc_2022/day_06/: a.py  b.py  input.txt  parser.py  shared.py
aoc_2022/day_07/: a.py  b.py  input.txt  parser.py  shared.py
aoc_2022/day_08/: a.py  b.py  input.txt  parser.py
aoc_2022/day_09/: a.py  b.py  input.txt  models.py  parser.py  shared.py
aoc_2022/day_10/: a.py  b.py  input.txt  models.py  non_artifiial_intelligence.py  parser.py  shared.py
aoc_2022/day_11/: a.py  b.py  input.txt  models.py  parser.py  shared.py
aoc_2022/day_12/: a.py  b.py  input.txt  models.py  parser.py  shared.py
aoc_2022/day_13/: a.py  b.py  input.txt  models.py  parser.py  shared.py
aoc_2022/day_14/: a.py  b.py  input.txt  models.py  parser.py
aoc_2022/day_15/: a.py  b.py  input.txt  models.py  parser.py
aoc_2022/day_16/: a.py  b.py  input.txt  models.py  parser.py
aoc_2022/day_17/: a.py  b.py  input.txt  models.py  parser.py  shared.py
aoc_2022/day_18/: a.py  b.py  input.txt  models.py  parser.py
aoc_2022/day_19/: a.py  b.py  input.txt  models.py  parser.py  shared.py
aoc_2022/day_20/: a.py  (+5 more)
tests/: test_aoc_2022.py
utils/: create_files.py  file_data.py  submit.py
(+81 files in other folders)
