[tool.poetry]
name = "advent-of-code-2022-python"
version = "0.1.0"
description = ""
authors = ["Tyler Hoffman <tyler.c.hoffman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
advent-of-code-data = "^1.1.2"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
mypy = "^0.971"
black = "^22.6.0"
isort = "^5.10.1"
flake8 = "^5.0.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
