[tool.poetry]
name = "advent-of-code-2022-python"
version = "0.1.0"
description = ""
authors = ["Tyler Hoffman <tyler.c.hoffman@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]
pytest = "^7.2.0"
black = "^22.10.0"
isort = "^5.10.1"
flake8 = "^6.0.0"
pyright = "^1.1.282"
pre-commit = "^2.20.0"
advent-of-code-data = "^1.2.3"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
